# end-to-end-mlops-pipeline

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
api/: main.py  schemas.py
app/: streamlit_app.py
assets/: architecture.mmd  mlops_lifecycle.mmd
data/examples/: batch_prediction_sample.csv
data/raw/: sample_churn.csv
k8s/: deployment.yaml
models/: model_metadata.json
notebooks/: 01_mlops_experiment_tracking.ipynb
scripts/: aws_ecs_notes.md  cloud_run_deploy.sh  train_and_run.sh
src/: __init__.py  config.py  data.py  evaluate.py  features.py  model_registry.py  modeling.py  monitoring.py  predict.py  train.py
tests/: test_api.py  test_features.py  test_monitoring.py
